fixed form page so it won't overflow

--- a/AppYours/app/assets/stylesheets/apps.scss
+++ b/AppYours/app/assets/stylesheets/apps.scss
@@ -68,13 +68,13 @@
 
 
 #form{
-
   position:relative;
   background-color:white;
   width:80%;
   height:45em;
   padding-bottom: 10px;
   margin-top:3em;
+  overflow:auto;
   margin:auto;
   -moz-box-shadow: 0 0 30px 3px black;
   -webkit-box-shadow: 0 0 30px 3px black;
